# datalayers-adapter-erl

./: .gitignore  Cargo.toml  Makefile  README.md  do_compile.sh  do_prebuilt.sh  download.sh  env.sh  pkgname.sh  rebar.config
.ci/docker-compose-file/: .env  docker-compose-datalayers.yaml
.ci/docker-compose-file/certs/: ca.key  openssl.cnf  server.crt  server.key
.github/workflows/: _pr_entrypoint.yaml  _test_entrypoint.yaml  release.yaml  try_macos_build.yaml
crates/datalayers-adapter-nif/: Cargo.toml  build.rs
crates/datalayers-adapter-nif/src/: atoms.rs  client.rs  client_opts.rs  lib.rs  resource.rs  types.rs  util.rs
include/: datalayers.hrl
priv/: .gitignore
src/: datalayers.app.src  datalayers.erl  datalayers_nif.erl  datalayers_sock.erl  libdatalayers.erl
test/: datalayers_SUITE.erl  libdatalayers_test.erl
test/data/certs/: ca.crt
