[workspace]
resolver = "3"
members = [
    "crates/datalayers-adapter-nif",
]

# This profile optimizes for good runtime performance.
[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
debug = 0
debug-assertions = false
strip = "symbols"
incremental = true
# reference: https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
rpath = false
