[package]
name = "datalayers-adapter-nif"
version = "0.1.0"
edition = "2024"

build-dependencies = []

[lib]
name = "datalayers"
crate-type = ["dylib"]

[dependencies]
rustler = "0.36.2"
anyhow = "1.0"
arrow-array = { version = "55.1", features = ["chrono-tz"] }
arrow-cast = { version = "55.1", features = ["prettyprint"] }
arrow-flight = { version = "55.1", features = [
    "flight-sql-experimental",
    "tls",
] }
arrow-schema = "55.1"
chrono = "0.4"
futures = "0.3"
regex = "1.10"
tokio = { version = "1.40", features = ["full"] }
tonic = "0.11"
