[package]
name = "datalayers-adapter-nif"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "datalayers_nif"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
arrow-array = { version = "55.2", features = ["chrono-tz"] }
arrow-cast = { version = "55.2", features = ["prettyprint"] }
arrow-flight = { version = "55.2", features = [
    "flight-sql-experimental",
    "tls",
] }
arrow-schema = "55.2"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.5.0"
regex = "1.10"
rustler = "0.36.2"
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12.3"
